# Frame-Chopper

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
html alt/: index.html  styles.css
public/: index.html  styles.css
src/: index.html  index.js  main.js  main.ts  preload.js  renderer.js  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/: settings.css  styles.css
src/html/: index.html  settings.html
src/public/: index.html  styles.css
src/scripts/main/: Main.js  Renderer.js  SettingsRenderer.js
src/scripts/others/: DisableDragAndDrop.js  ElementImports.js  InfoIcon.js
