[package]
name = "frame-chopper"
version = "1.2.0"
description = "App to cut frames from videos"
authors = [""]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "dialog-all",
  "window-all",
  "path-all",
  "fs-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
sevenz-rust = "0.4"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

